# msi_feature_extraction

./: .gitignore  LICENSE  README.md  environment.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml  python-publish.yml
examples/: Adding-more-metadata.ipynb  SBB5-10cm_520-580_mn.graphml  SBB5-10cm_Feature_Extraction.ipynb
guaymas_test_samples/: 2022_06_07_5000_0-4cm_A_150-400da.ipynb
guaymas_test_samples/data/: corSolver.pkl  image_registration.py  roi_spot.txt  spot_list.csv
mfe/: __init__.py
mfe/src/: calibration.py  extraction.py  feature.py  from_txt.py  peak_picking.py  test.py
mfe/src/PeakPicking/: StructuredPeaks.py
mfe/src/util/: accurate_mz.py  calibration.py  normalization.py  outlier_detection.py  parse_txt.py
mfe/src/vis/: cluster.py  tic.py
scripts/: extract_feature_table.py  kde_workflow.py  nmf.py  nmf_with_instrumental_data.py  peak_pick_threshold.py  peak_picking.py  ppm_error.py  settings.py  supervised_learning.py  tic_influence.py  util.py
src/: __init__.py
src/mfe/: bulk_export.py  calibration.py  feature.py  from_txt.py  img_reg.py  patch.py  peak_picking.py  time.py  util.py
src/mfe/depreciated/: cluster.py  normalization.py  outlier_detection.py
src/mfe/templates/: index.html
src/mfe/time_util/: converter.py
src/mfe/toolbox/: parameters_search.py
src/mfe/util/: CorSolver.py  Spectrum.py  metrics.py  normalization.py  outlier_detection.py
test/: msi_from_txt.py
tests/: test_basic.py
tests/test_data/: da_export.txt
