[metadata]
name = mfe
version = 0.0.1
author = Weimin Liu
author_email = wliu@marum.de
description = Clean mass spectrometry imaging dataset and extract geologically meaningful features
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/weimin-liu/msi_feature_extraction
project_urls =
    Bug Tracker = https://github.com/weimin-liu/msi_feature_extraction/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src